edited table labels

--- a/views/all_data.pug
+++ b/views/all_data.pug
@@ -8,9 +8,9 @@ block content
     table(class='table table-striped')
       thead
         tr
-          th #[strong Auxilliary]
-          th #[strong Aggregate]
-          th #[strong Status]
+          th #[strong KIGAMBONI]
+          th #[strong TEMEKE]
+          th #[strong STATUS]
       tbody
         each item in data
           tr
